force-app/main/default/objects/bar__Log__c/fields/bar__Log_Number__c.field-meta.xml
<CustomField>
    <fullName>bar__Log_Number__c</fullName>
    <description>External system identifier for this log entry</description>
    <externalId>true</externalId>
    <label>Log Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>