force-app/main/default/objects/bar__Log__c/fields/bar__Message__c.field-meta.xml
<CustomField>
    <fullName>bar__Message__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>