force-app/main/default/objects/bar__Log__c/fields/bar__Policy_Id__c.field-meta.xml
<CustomField>
    <fullName>bar__Policy_Id__c</fullName>
    <label>Policy Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>