force-app/main/default/objects/bar__Log__c/fields/bar__Run_Id__c.field-meta.xml
<CustomField>
    <fullName>bar__Run_Id__c</fullName>
    <label>Run Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>