force-app/main/default/objects/bar__Log__c/fields/bar__Status__c.field-meta.xml
<CustomField>
    <fullName>bar__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INFO</fullName>
                <color>#3366FF</color>
                <default>true</default>
                <label>INFO</label>
            </value>
            <value>
                <fullName>WARN</fullName>
                <color>#FFCC33</color>
                <label>WARN</label>
            </value>
            <value>
                <fullName>ERROR</fullName>
                <color>#FF0000</color>
                <label>ERROR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>