force-app/main/default/objects/bar__Log__c/fields/bar__Timestamp__c.field-meta.xml
<CustomField>
    <fullName>bar__Timestamp__c</fullName>
    <description>Log event timestamp from the external system</description>
    <label>Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>