force-app/main/default/objects/bar__Log__c/listViews/bar__All.listView-meta.xml
<ListView>
    <fullName>bar__All</fullName>
    <columns>bar__Log_Number__c</columns>
    <columns>bar__Timestamp__c</columns>
    <columns>NAME</columns>
    <columns>bar__Message__c</columns>
    <columns>bar__Run_Id__c</columns>
    <columns>bar__Policy_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>